[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotspot"
version = "1.1.3"
authors = [{name = "David DeTomaso", email = "David.DeTomaso@berkeley.edu"}]
description = "Identifying informative genes (and gene modules) in a single-cell dataset."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7,<4.0"
dependencies = [
    "anndata>=0.7",
    "matplotlib>=3.0.0",
    "numba>=0.43.1",
    "numpy>=1.16.4,<2.0",
    "pandas>=0.24.0",
    "pynndescent>=0.5",
    "scikit-learn>=0.21.2",
    "scipy>=1.2.1",
    "seaborn>=0.9.0",
    "statsmodels>=0.9.0",
    "tqdm>=4.32.2",
    "importlib-metadata>1.0; python_version<'3.8'"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://github.com/yoseflab/hostpost"
Documentation = "https://hotspot.readthedocs.io/"

[project.optional-dependencies]
test = ["pytest>=5.0", "scanpy"]
docs = ["sphinx-book-theme>=0.2.0", "myst-nb", "sphinx>=4.1", "ipython"]

[tool.setuptools]
packages = ["hotspot"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "hotspot/__init__.py"]
